<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.schedule.NextEventFragment"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner_next_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh_next_event"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/next_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progressBar_next_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>